--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700,900');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap');
 
 body {
 	font-family: Roboto, Arial, sans-serif;
@@ -17,7 +17,7 @@ body {
 }
 
 .header-nav a, 
-.text .hero-sec {
+.hero-sec {
 	font-size: 18px;
 	font-weight: 400;
 	color: #E5E7EB;
@@ -70,9 +70,13 @@ body {
 	font-weight: 700;
 	color: #F9FAF8; 
 	background-color: #3882F6;
-	padding: 8px 24px;
+	padding: 6px 30px;
 	border: 0px;
 	border-radius: 8px;
+}
+
+.text button:active {
+	background-color: #3D38F6;
 }
 
 .header-content .media{
@@ -82,7 +86,128 @@ body {
 
 .header-content .image {
 	flex-basis: auto;
-	width: 100%;
-	height: 100%;
+	max-width: 100%;
+	height: auto;
+	border-radius: 12px;
 }
 
+.info-section {
+	padding-bottom: 100px;
+	text-align: center;
+}
+
+.info-section .title {
+	font-size: 36px;	
+	font-weight: 900;
+	color: #1F2937;
+	padding: 50px;
+}
+
+.info-container {
+	display: flex;
+	justify-content: center;
+	gap: 50px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.image-icon {
+	width: 150px;
+	height: 150px;
+	border: 4px solid #3882F6;
+	border-radius: 20px;
+	margin-bottom: 8px;
+}
+
+.icon {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 150px;
+}
+
+.quote {
+	background-color: #E5E7EB;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 100px;
+}
+
+.quote-text {
+	font-size: 36px; 
+	font-weight: 300;
+	color: #1F2937;
+	font-style: italic;
+}
+
+.quote-author {
+	font-size: 24px;
+	margin-right: 50px;
+}
+
+.quote-container {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	max-width: 750px;
+}
+
+.action {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 100px 0px;
+}
+
+.action .content {
+	background-color: #3882F6;
+	display: flex;
+	align-items: center;
+	padding: 50px 100px;
+	border-radius: 12px;
+}
+
+.action .action-main {
+	font-weight: bold;
+	font-size: 24px;
+	color: #F9FAF8;
+}
+
+.action .action-sec {
+	color: #F9FAF8;
+	font-size: 18px;
+}
+
+.action button {
+	margin-left: 100px;
+	padding: 6px 30px;
+	border-radius: 8px;
+	border: 3px solid;
+	border-color: #F9FAF8;
+	background-color: #3882F6; 
+	color: #F9FAF8;
+	font-size: 20px;
+}
+
+.action button:active {
+	background-color: #3D38F6;
+}
+
+.footer {
+	height: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.footer a {
+	color: #F9FAF8;
+	font-size: 18px;
+	text-decoration: none;
+}
+
+.footer a:hover {
+	text-decoration: underline;
+}
