--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@ body {
 	color: #F9FAF8;
 }
 
+.header-nav {
+	padding-top: 10px;
+}
+
 .header-nav a, 
 .hero-sec {
 	font-size: 18px;
@@ -23,10 +27,9 @@ body {
 	color: #E5E7EB;
 }
 
-.header-nav .logo {
-	font-size: 24px;
-	font-weight: 700;
-	color: #F9FAF8;
+.header-nav .logo img {
+	max-width: 50px;
+	max-height: 50px;
 }
 
 .header-nav ul,
@@ -47,6 +50,18 @@ body {
 
 .header-nav li {
 	list-style-type: none;
+}
+
+.header-nav li div {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 4px;
+}
+
+.header-nav li div img {
+	max-width: 18px;
+	max-height: 18px;
 }
 
 .header-nav a {
@@ -92,7 +107,7 @@ body {
 }
 
 .info-section {
-	padding-bottom: 100px;
+	padding-bottom: 50px;
 	text-align: center;
 }
 
@@ -105,15 +120,22 @@ body {
 
 .info-container {
 	display: flex;
-	justify-content: center;
-	gap: 50px;
+	flex-direction: column;
+	align-items: center;
 	margin-left: auto;
 	margin-right: auto;
 }
 
+.info-container-2 {
+	display: flex;
+	justify-content: center;
+	gap: 50%;
+	margin-bottom: 50px;
+}
+
 .image-icon {
-	width: 150px;
-	height: 150px;
+	width: 300px;
+	height: 300px;
 	border: 4px solid #3882F6;
 	border-radius: 20px;
 	margin-bottom: 8px;
@@ -123,7 +145,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	max-width: 150px;
+	max-width: 200px;
 }
 
 .quote {
@@ -200,15 +222,19 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	gap: 25px;
 }
 
-.footer a {
+.footer p {
 	color: #F9FAF8;
 	font-size: 18px;
-	text-decoration: none;
 }
 
-.header-nav a:hover,
-.footer a:hover {
+.footer img {
+	max-width: 48px;
+	max-height: 48px;
+}
+
+.header-nav a:hover {
 	text-decoration: underline;
 }
